# multigrid_bundle_adjustment

./: .gitattributes  .gitmodules  .lfsconfig  1dsfm2bal.jl  Build.hs  README.md  cond.jl  diameter.jl  jacobian.jl  setup.bash
ba-problems/100K_whole_city.problem/: noise.txt  parallel_gamg_np16.csv  parallel_gamg_np2.csv  parallel_gamg_np4.csv  parallel_gamg_np9.csv  parallel_pbjacobi_np16.csv  parallel_pbjacobi_np4.csv  parallel_pbjacobi_np8.csv
ba-problems/10K_long_path.problem/: ceres_benchmark_multigrid_robust.csv  ceres_benchmark_multigrid_robust01.csv  ceres_benchmark_pbjacobi_robust.csv  ceres_benchmark_pbjacobi_robust01.csv  ceres_benchmark_visibility_robust01.csv  noise.txt
ba-problems/10_block.problem/: ceres_benchmark_multigrid.csv  (+5 more)
ba_eig/: CMakeLists.txt  ba_eig.cpp  bamg_preconditioner.hpp  options_largest.txt  options_smallest.txt
ba_eig/cmake/: FindJulia.cmake  FindPETSc.cmake  FindSLEPc.cmake
batao-scripts/: arguments.txt  bench.bash  parallel.bash  run_bench.bash  run_serial.bash  serial.bash
multigrid_analysis/: CMakeLists.txt  P_to_S.jl  cr-analysis.cpp  default_options.txt
multigrid_analysis/cmake/: FindPETSc.cmake  FindSLEPc.cmake
notebooks/: BAEigenmodes.ipynb  CompatibleRelaxationAnalysis.ipynb  JtJ eigenmodes.ipynb  Multigrid Prolongation Eigenmodes.ipynb  Untitled1.ipynb  aggregation_comparison.ipynb  benchmarks.ipynb  bundle_adjustment_free_modes.nb  connectivity.ipynb  eigenmodes.ipynb  implicit_vs_explicit.ipynb  nullspace_derivatives.nb  plotting_common.r  scaling.ipynb  solve_accuracy.ipynb
viz/: ba_eigenmodes.jl
(+734 files in other folders)
